  * Bugfix in listjob when no jobs are available 
  * NEW! Virtual IP support to backup active cluster services
  * Removed unmaintained Docker support
  * NEW! Backup Policy support
  * Bugfix in API listing holded snaps
  * NEW! Ubuntu 24.04 client & server support
  * NEW! Configurable extra partition size on runbackup
  * Improvement in remove_client_scripts. Avoid removal of other content.
  * NEW! Added TLS secure transport to DRLM rsync Backups
  * NEW! Added ReaR restorefiles workflow
  * NEW! Added DRLM restore workflow
  * Bugfix storing logs in incremental backups
  * NEW! Added drlm-extra interface to patch/extend rear integrations
  
 -- Pau Roura <pau@brainupdaters.net>  Tue, 25 Jun 2024 00:00:00 +0100

drlm (2.4.11) stable release; urgency=high
  * NEW! RAWDISK output backup type supported
  * Updated Suse 15 ReaR repositories
  * Bugfix in web, holded backups are not shown
  * New install script
  * Bugfix in installclient adding network interface
  * Check client shell before installclient
  * Bugfix in DRLM pre and post runbackup script
  * Added ability to adjust client configs upon migrations on rescue startup
  * Added ReaR tunning to avoid mac mapping on automatic restore
  * NEW! Telegram error reporting supported
  * NEW! Configurable error reporting message
  * NEW! Toggle pretty mode from command line in all lists
  * Bugfix in get_client_used_mb
  * Bugfix in Debian12 scheduled jobs
  * Bugfix in install clients, force non-interactive installations

 -- Pau Roura <pau@brainupdaters.net>  Wed, 13 Mar 2024 00:00:00 +0100

drlm (2.4.10) stable release; urgency=high
  * Bugfix in installclient tunnig_rear function
  * Bugfix avoid duplicate settings in /etc/drlm/local.conf during update or install process
  * Bugfix in user deletion to skip error code 12
  * NEW! XML/JSON error reporting supported
  * Bugfix in impbackup client configuration
  * Bugfix runbackup umounting previous backups 
  * Bugfix runbackup rsync hidden warning errors  
