@@ -10,13 +10,15 @@ drlm (2.4.12) stable release; urgency=high
   * NEW! Ubuntu 24.04 client & server support
   * NEW! Configurable extra partition size on runbackup
   * Improvement in remove_client_scripts. Avoid removal of other content.
+  * Bugfix storing logs in incremental backups
   * NEW! Added TLS secure transport to DRLM rsync Backups
   * NEW! Added ReaR restorefiles workflow
   * NEW! Added DRLM restore workflow
-  * Bugfix storing logs in incremental backups
   * NEW! Added drlm-extra interface to patch/extend rear integrations
+  * NEW! Added new client git install method as default. (-r/-U keeps old style install)
+  * Updated install script
   
- -- Pau Roura <pau@brainupdaters.net>  Tue, 25 Jun 2024 00:00:00 +0100
+ -- Pau Roura <pau@brainupdaters.net>  Fri, 20 Sep 2024 00:00:00 +0100
 
 drlm (2.4.11) stable release; urgency=high
   * NEW! RAWDISK output backup type supported
